# KinectToolBox

./: CMakeLists.txt  aspectratiopixmaplabel.cpp  aspectratiopixmaplabel.h  aspectratiopixmaplabel.ui  capturelist.cpp  capturelist.h  capturelist.ui  capturepreview.cpp  capturepreview.h  capturepreview.ui  filtering.cpp  filtering.h  kinect_types.cpp  kinect_types.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math.h  myfreenectdevice.cpp  myfreenectdevice.h  pointcloudrenderer.cpp  pointcloudrenderer.h  pointcloudrenderer.ui  threadworker.cpp  threadworker.h  videoplayer.cpp  videoplayer.h  videoplayer.ui
Filtering/: andholder.cpp  andholder.h  andholder.ui  componentbinaryexpression.cpp  componentbinaryexpression.h  componentbinaryexpression.ui  filterslot.cpp  filterslot.h  filterslot.ui  filterwidget.cpp  filterwidget.h  filterwidget.ui  orholder.cpp  orholder.h  orholder.ui
